# photos

./: .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  MANIFEST.in  README.md  _config.yml  package.json  pyproject.toml  requirements.txt  setup.py
demo/: Dockerfile  docker-compose.yml  init.sh
gallery/: index.html  package-lock.json  package.json  vite.config.js
gallery/src/: index.css  main.js  router.js
gallery/src/views/: Home.vue  Login.vue
photos/: api.py  hooks.py  reference.py  utils.py
photos/config/: desktop.py  docs.py
photos/photos/desk_page/photos/: photos.json
photos/photos/doctype/object/: object.json  object.py
photos/photos/doctype/person/: person.js  person.json  person.py  person_dashboard.py  test_person.py
photos/photos/doctype/photo/: photo.js  photo.json  photo.py  test_photo.py
photos/photos/doctype/roi/: roi.js  roi.json  roi.py  test_roi.py
photos/photos/doctype/roi_object/: roi_object.json  roi_object.py
photos/photos/doctype/roi_person/: roi_person.json  roi_person.py
photos/photos/workspace/photos/: photos.json
photos/public/css/: font-awesome.min.css
